# Raspberry_pi_pico_project_template

./: CMakeLists.txt  README.md
src/: name_of_this_project.cpp
